--- a/style.scss
+++ b/style.scss
@@ -12,35 +12,7 @@ License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:  storefront
 */
 
-.bt-flex {
-    display: flex;
-    flex-direction: wrap;
-    flex-wrap: wrap;
-}
-
-.bt-1-2 {
-    width: 50%;
-    @media (max-width: 768px) {
-        width: 100%; 
-    }
-}
-
-.site-info {
-    text-align: center;
-}
-
-@media (min-width: 768px) {
-    .col-full {
-        max-width: 78.498938em;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 0 2.617924em;
-        box-sizing: content-box;
-    }
-}
-
-#page {
-    .site-header {
-        margin-bottom: 0px;
-    }
-}
+@import 'scss/variables';
+@import 'scss/common';
+@import 'scss/hero-image';
+@import 'scss/footer';
