--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,11 +8,14 @@
 
 .storefront-primary-navigation {
     position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     top: 40px;
-    right: 100px;
     width: 80%;
     padding-left: 50px;
-    max-width: 1300px;
+    max-width: 1370px;
     @media (max-width: 750px) {
         position: initial;
         width: 100%;
